# auto-docx

./: .gitignore  README.md  autodocx.toml  pyproject.toml
docx/: header.docx  template.docx  ВКР_ШАБЛОН_2026.docx
markdown/: 1.md  abstract.md  appendix_a.md  conclusion.md  definitions.md  intro.md  reference.bib  references.md  table_of_contents.md
src/autodocx/: __init__.py  __main__.py  citations.py  cli.py  config.py  formulas.py  header.py  images.py  ns.py  parser.py  pipeline.py  renderer.py  runs.py  tables.py  toc.py
tests/: test_citations.py  test_parser.py  test_pipeline.py  test_renderer.py  test_runs.py  test_tables.py
