[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodocx"
version = "0.1.0"
description = "Render Markdown into a styled .docx using a Word template."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "AutoDocx contributors" }]
keywords = ["markdown", "docx", "pandoc", "word", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
]
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
autodocx = "autodocx.cli:main"

[project.urls]
Homepage = "https://github.com/jqnfxa/AutoDocx"
Issues = "https://github.com/jqnfxa/AutoDocx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autodocx"]

[tool.hatch.build.targets.sdist]
include = [
    "src/autodocx",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # We deliberately use print() as the build-progress channel.
    "T201",
    # Russian text and GOST-required punctuation (С., Т., №) trip the
    # ambiguous-unicode lint; the strings are intentional.
    "RUF001", "RUF002", "RUF003",
    # Conflicts with ruff format: trailing-comma rule + missing-trailing-comma rule.
    "COM812",
    # Docstrings are useful where useful; we don't want one on every
    # private helper, dataclass __init__, or module __init__.
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Error-message style rules — we like in-place messages.
    "TRY003", "EM101", "EM102",
    # Magic values are fine for one-off constants (font size, border width).
    "PLR2004",
    # The parser, pipeline, and CLI are intrinsically branchy; cyclomatic
    # / argument / statement caps just add noise.
    "C901", "PLR0912", "PLR0913", "PLR0915",
    # XML / subprocess hardening — we control the inputs (template.docx,
    # pandoc command line) and trust them.
    "S314", "S603", "S607",
    # PandocUnavailable is intentionally not "*Error".
    "N818",
    # Boolean keyword args (bold=, italic=, page_break=, …) are core API.
    "FBT001", "FBT002",
    # ns.register_namespaces() guards against double-registration via a
    # module-level flag — global statement is correct here.
    "PLW0603",
    # subprocess.run without check=True is intentional: we read returncode
    # ourselves so we can fall back to plain text on pandoc failure.
    "PLW1510",
]

[tool.ruff.lint.per-file-ignores]
"src/autodocx/__init__.py" = ["F401"]  # re-exports
# Tests are allowed to use assert, magic numbers, plain naming, etc.
"tests/**" = [
    "S101",       # assert in tests is fine
    "PLR2004",    # magic numbers in test data
    "ANN",        # type-annotation rigor isn't worth it for tests
    "D",          # no docstrings on test funcs
    "INP001",     # tests/ doesn't need __init__.py
    "SLF001",     # tests poke at private helpers
    "PT011",      # broad pytest.raises is fine in unit tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"
